add redis and serializer;